@@ -2,6 +2,7 @@
 
 	* Replaced EXEVAL with SKIPEVAL.
 	* Update funcnest atomically.
+	* Only set skipcount for break and continue.
 
 2005-02-28  A Costa <agcosta@gis.net>
 
